--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1 style="background-color:DodgerBlue;">imdabest5687</h1>
-<p style="background-color:Tomato;">Welcome to my website!</p>
+<h1>imdabest5687</h1>
+<p>Welcome to my website!</p>
 
 </body>
 </html>
