--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1 style="color:blue;">imdabest5687</h1>
-<p style="color:red;">Welcome to my website!</p>
+<h1 style="color:red;">imdabest5687</h1>
+<p style="color:magenta;">Welcome to my website!</p>
 
 </body>
 </html>
