--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 
-<h1 style="color:DarkMagenta<p>;">imdabest5687</h1>
-<p style="color:IndianRed;">Welcome to my website!</p>
+<h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: Candara">imdabest5687</h1>
+<p style="color: IndianRed;font-size: 200%;text-align: center;font-family: Candara">Welcome to my website!</p>
+
+	<a href="https://3kho.github.io"
+		<button style="color: DarkGreen;font-size: 30px;font-family: Candara;">3kho Github</button>
+	</a>
 
 </body>
 </html>
