--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:rgb(38, 148, 13);">
 <head>
-<title>fart</title>
+<title>(H)[e]{l}[l](o)</title>
 
 </head>
 <body>
