--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:rgb(38, 148, 13);">
 <head>
-<title>(H)[e]{l}[l](o)</title>
+	
+	<title>(H)[e]{l}[l](o)</title>
+
+	<style>
+
+		.button1 {
+			border: none;
+  			color: white;
+			padding: 15px 32px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 30px;
+			font-family: Candara;
+			margin: 4px 2px;
+			cursor: pointer;
+			
+		}
+		
+	</style>
 
 </head>
+
+<body style="background-color:rgb(38, 148, 13);">
+
 <body>
 
-<h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: Candara">imdabest5687</h1>
+<h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: monospace">imdabest5687</h1>
 <p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara">Welcome to my website!</p>
 
-		<a href="flappy_bird.html">
-			<button style="color: rgb(139, 17, 137);font-size: 30px;font-family: Candara;">Flappy Bird</button>
-		</a>
+<a href="flappy_bird.html">
+	
+	<button class="button1">
+		Flappy Bird
+	</button>
+	
+</a>
 		
 		
 		<div id="game">
