different button color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		.button1 {
 			border: none;
-  			color: white;
+  			color: rgb(139, 17, 137);
 			padding: 15px 32px;
 			text-align: center;
 			text-decoration: none;
