more button changes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<style>
 
 		.button1 {
-			border: none;
+			border: 2px solid black;
+			border-radius: 5px;
   			color: rgb(139, 17, 137);
+			background-color: #FFA552;
 			padding: 15px 32px;
 			text-align: center;
 			text-decoration: none;
