updated stylesheet in index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	
 	<title>(H)[e]{l}[l](o)</title>
+
+	<link rel="stylesheet" href="style.css">
 
 	<style>
 
