--- a/index.html
+++ b/index.html
@@ -4,25 +4,11 @@
 	
 	<title>(H)[e]{l}[l](o)</title>
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="index_style.css">
 
 	<style>
 
-		.button1 {
-			border: 2px solid black;
-			border-radius: 5px;
-  			color: rgb(139, 17, 137);
-			background-color: #FFA552;
-			padding: 15px 32px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 30px;
-			font-family: Candara;
-			margin: 4px 2px;
-			cursor: pointer;
-			
-		}
+		
 		
 	</style>
 
