--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
 <h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: monospace">imdabest5687</h1>
 <p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara">Welcome to my website!</p>
 
-<a href="flappy_bird.html">
+<div>
+	<a href="flappy_bird.html">
+		
+		<button class="button1">
+			
+			Flappy Bird
+			
+		</button>
 	
-	<button class="button1">
-		Flappy Bird
-	</button>
-	
-</a>
+	</a>
+
+</div>
 		
 		
 		<div id="game">
