--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
 
 <body style="background-color:rgb(38, 148, 13);">
 
-<body>
-
 <h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: monospace">imdabest5687</h1>
 <p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara">Welcome to my website!</p>
 
 <div>
-	<a href="flappy_bird.html">
-		
-		<button class="button1">
-			
-			Flappy Bird
-			
-		</button>
 	
-	</a>
+	<button class="button1"; href="flappy_bird.html">
+		
+		Flappy Bird
+			
+	</button>
 
 </div>
 		
