--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
 <h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: monospace">imdabest5687</h1>
 <p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara">Welcome to my website!</p>
 
-<div>
+<div class="centerbutton">
 	
-	<button class="button1"; href="flappy_bird.html">
+	<div class="center">
 		
-		Flappy Bird
+		<button class="button1"; href="flappy_bird.html">
 			
-	</button>
+			Flappy Bird
+			
+		</button>
+		
+	</div>
 
 </div>
 		
