--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style="background-color:rgb(38, 148, 13);">
 
 <h1 style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: monospace">imdabest5687</h1>
-<p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara">Welcome to my website!</p>
+<p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara;margin-bottom: auto">Welcome to my website!</p>
 
 <div class="centerbutton">
 	
