--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 
 	<style>
 
-		
+		#name {
+			color: RebeccaPurple;
+			font-size: 500%;
+			text-align: center;
+			font-family: monospace
+		}
+
+		#subtitle {
+			color: rgb(158, 6, 6);
+			font-size: 200%;
+			text-align: center;
+			font-family: Candara;
+			margin-bottom: auto
+		}
 		
 	</style>
 
@@ -16,8 +29,8 @@
 
 <body style="background-color:rgb(38, 148, 13);">
 
-<h1 id="typewriter";style="color: RebeccaPurple;font-size: 500%;text-align: center;font-family: monospace">imdabest5687</h1>
-<p style="color: rgb(158, 6, 6);font-size: 200%;text-align: center;font-family: Candara;margin-bottom: auto">Welcome to my website!</p>
+<h1 id="name">imdabest5687</h1>
+<p id="subtitle">Welcome to my website!</p>
 
 <div class="centerbutton">
 	
