--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 
 </div>
 
+<div>
+	 <a href='http://www.freevisitorcounters.com'>on Freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=07e4cb2a6b65f0aa4eb9e5aca6b4f0c53030c34f'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1100561/t/12"></script>
+</div>
+
 		
 		
 		<div id="game">
